added a paragraph of text

--- a/helloworld.html
+++ b/helloworld.html
@@ -7,6 +7,6 @@
     <title>Platzi</title>
 </head>
 <body><p>Saludos people</p>
-    
+    <p>Por favor cuentame que te parecio</p>
 </body>
 </html>
